# raze

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  LEGAL.md  LICENSE  Makefile  README.md  ROADMAP.md  THIRD_PARTY_NOTICES.md
.github/workflows/: ci.yml  full-tests.yml  hardening.yml
bench/: README.md  bench_compressed.sh  bench_encrypted.sh  bench_expanded.sh  bench_external.sh  bench_hot_solid.sh  bench_hot_solid_stable.sh  bench_solid.sh  bench_split.sh  bench_store.sh
corpus/: README.md  manifest.tsv
docs/: README.md  beta_contract.md  beta_readiness_report.md  compat_matrix.md  platform_matrix.md  rarlab_technote.md  unrar_compat_help.txt
docs/adr/: 2026-02-19-beta-command-surface.md  README.md
docs/perf/: baseline.md  bench_compressed_baseline.txt  bench_encrypted_baseline.txt  bench_solid_baseline.txt  bench_split_baseline.txt  bench_store_baseline.txt
include/raze/: raze.h
scripts/: corpus_build_expanded.sh  corpus_build_local.sh  corpus_build_thematic.sh  corpus_fetch.sh  find_rar.sh  find_unrar.sh
src/checksum/: blake2sp.c  blake2sp.h  crc32.c  crc32.h
src/cli/: cli_args.c  cli_args.h  main.c  match.c  match.h  overwrite_prompt.c  overwrite_prompt.h
src/crypto/: crypto_stub.c  rar5_crypt.c  rar5_crypt.h  rar5_kdf.c  rar5_kdf.h
src/decode/: decode_internal.h  decoder.c  extract_compressed.c  extract_compressed.h  extract_store.c  extract_store.h  list_archive.c  print_archive.c  print_archive.h  test_archive.c  test_archive.h
tests/: README.md  run_tests.sh  run_tests_expanded.sh  test_parser_units.c  test_parser_units.sh
(+53 files in other folders)
